--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -1,5 +1,83 @@
 {% extends "base.html" %} {% block content %}
-<h1 class="title">
-    Welcome, {{ name }}!
-</h1>
+
+<h1 class="title">Welcome, {{ name }}!</h1>
+<input class="input is-medium w-75 mb-5" type="text" placeholder="Your Command" />
+
+<div class="container d-flex flex-wrap justify-content-center">
+    <div class="card col-3 m-2">
+        <div class="card-image">
+            <figure class="image is-4by3">
+                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image" />
+            </figure>
+        </div>
+        <div class="card-content" style="padding-top: 10px">
+            <div class="content" style="font-size: 15px">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, asperiores quas. Pariatur quia animi ipsum vitae iure nostrum, commodi tempore!
+            </div>
+        </div>
+    </div>
+    <div class="card col-3 m-2">
+        <div class="card-image">
+            <figure class="image is-4by3">
+                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image" />
+            </figure>
+        </div>
+        <div class="card-content" style="padding-top: 10px">
+            <div class="content" style="font-size: 15px">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, asperiores quas. Pariatur quia animi ipsum vitae iure nostrum, commodi tempore!
+            </div>
+        </div>
+    </div>
+    <div class="card col-3 m-2">
+        <div class="card-image">
+            <figure class="image is-4by3">
+                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image" />
+            </figure>
+        </div>
+        <div class="card-content" style="padding-top: 10px">
+            <div class="content" style="font-size: 15px">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, asperiores quas. Pariatur quia animi ipsum vitae iure nostrum, commodi tempore!
+            </div>
+        </div>
+    </div>
+    <div class="card col-3 m-2">
+        <div class="card-image">
+            <figure class="image is-4by3">
+                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image" />
+            </figure>
+        </div>
+        <div class="card-content" style="padding-top: 10px">
+            <div class="content" style="font-size: 15px">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, asperiores quas. Pariatur quia animi ipsum vitae iure nostrum, commodi tempore!
+            </div>
+        </div>
+    </div>
+    <div class="card col-3 m-2">
+        <div class="card-image">
+            <figure class="image is-4by3">
+                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image" />
+            </figure>
+        </div>
+        <div class="card-content" style="padding-top: 10px">
+            <div class="content" style="font-size: 15px">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, asperiores quas. Pariatur quia animi ipsum vitae iure nostrum, commodi tempore!
+            </div>
+        </div>
+    </div>
+    <div class="card col-3 m-2">
+        <div class="card-image">
+            <figure class="image is-4by3">
+                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image" />
+            </figure>
+        </div>
+        <div class="card-content" style="padding-top: 10px">
+            <div class="content" style="font-size: 15px">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae, asperiores quas. Pariatur quia animi ipsum vitae iure nostrum, commodi tempore!
+            </div>
+        </div>
+    </div>
+</div>
+<div class="d-flex-justify-content-end mt-5">
+    <button class="button is-danger">Help Me !</button>
+</div>
 {% endblock %}
