--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -5,4 +5,5 @@
 <h2 class="subtitle">
     A guide for tourists with emergency contacts.
 </h2>
-{% endblock %}
+<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC3KDpiwKyCt5DGV3smV4n81apITxKz0uY&q=Lane 4 Danipali" allowfullscreen>
+</iframe> {% endblock %}
