--- a/project/templates/place-info.html
+++ b/project/templates/place-info.html
@@ -14,9 +14,7 @@
       <div>
         <h3><b>Info</b></h3>
         <p class="text-left">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque et
-          voluptatibus explicabo reiciendis tempore. Unde rerum voluptatibus vel
-          soluta voluptate?
+          {{ data }}
         </p>
       </div>
       <div class="mt-5">
@@ -102,7 +100,7 @@
   <div class="col-4">
     <div style="width: 100%; height: 400px">
       <img
-        src="https://images.pexels.com/photos/2884866/pexels-photo-2884866.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+        src="{{ img_list[0] }}"
         style="
           height: 100%;
           width: 100%;
@@ -118,7 +116,7 @@
     </div>
     <div style="width: 100%; height: 200px; margin-top: 10px">
       <img
-        src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0f/98/f7/df/charminar.jpg?w=900&h=600&s=1"
+        src="{{ img_list[1] }}"
         style="
           height: 100%;
           width: 100%;
@@ -133,9 +131,9 @@
       />
     </div>
     <div class="d-flex justify-content-between">
-      <div style="width: 200px; height: 200px; margin-top: 10px">
+      <div style="width: 200px; height: 200px; margin-top: 10px; padding: 0 3px 0 0;">
         <img
-          src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0f/98/f7/df/charminar.jpg?w=900&h=600&s=1"
+          src="{{ img_list[2] }}"
           style="
             height: 100%;
             width: 100%;
@@ -149,9 +147,9 @@
           alt="Responsive image"
         />
       </div>
-      <div style="width: 200px; height: 200px; margin-top: 10px">
+      <div style="width: 200px; height: 200px; margin-top: 10px; padding: 0 0 0 3px;">
         <img
-          src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0f/98/f7/df/charminar.jpg?w=900&h=600&s=1"
+          src="{{ img_list[3] }}"
           style="
             height: 100%;
             width: 100%;
@@ -173,10 +171,10 @@
   <div class="mapouter mt-5">
     <div class="gmap_canvas">
       <iframe
-        width="1200"
+        width="90%"
         height="500"
         id="gmap_canvas"
-        src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"
+        src="https://maps.google.com/maps?q={{ input_data }}&t=&z=13&ie=UTF8&iwloc=&output=embed"
         frameborder="0"
         scrolling="no"
         marginheight="0"
