--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -114,6 +114,38 @@
                 });
             }
         });
+        // function speakMessage(message) {
+        // if ('speechSynthesis' in window) {
+        //     var voices = speechSynthesis.getVoices();
+        //     if (voices.length !== 0) {
+        //         var msg = new SpeechSynthesisUtterance();
+        //         msg.voice = voices[3];
+        //         msg.text = message;
+        //         window.speechSynthesis.speak(msg);
+        //         msg.lang = 'en-IN';
+        //         // clearInterval(timer);
+        //     }
+        // } else {
+        //     alert("Sorry, your browser doesn't support text to speech!");
+        // }
+
+                         function startSpeaking(message){
+                             var msg = new SpeechSynthesisUtterance();
+                             msg.voice = voices; 
+                             msg.volume = 1; // From 0 to 1
+                             msg.rate = 1; // From 0.1 to 10
+                             msg.pitch = 2; // From 0 to 2
+                             // alert(window.speechSynthesis.getVoices().voice[5]);
+                             // msg.text = "Como estas Joel";
+                             msg.lang = 'en-IN';
+                             msg.text = message;
+                             window.speechSynthesis.speak(msg);
+                             alert('hello')
+                             
+                          
+                         }
+
+
     </script>
 </body>
 
